add information principal in the body

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
                     </li>
-                    
+
                 </ul>
                 <div class="d-flex gap-3" role="search">
                     <button class="btn btn-outline-dark" type="submit">login</button>
@@ -65,6 +65,27 @@
 
         </div>
     </nav>
+    <div>
+        <div>
+            <div>
+                <h1>MAKE REMOTE WORK</h1>
+                <P>Get your team in sync, no matter your location. Streamline processes, create team rituals, and watch
+                    productivity soar.</P>
+                <button class="btn btn-outline-dark" type="submit">Learn more</button>
+
+
+            </div>
+            <figure>
+                <img src="https://raw.githubusercontent.com/yurledyspuche25/landing/7d28bff547cd5b9900db6b38264954fd45601457/src/assets/client-databiz.svg" alt="" srcset="">
+                <img src="https://raw.githubusercontent.com/yurledyspuche25/landing/7d28bff547cd5b9900db6b38264954fd45601457/src/assets/client-audiophile.svg" alt="" srcset="">
+                <img src="https://raw.githubusercontent.com/yurledyspuche25/landing/7d28bff547cd5b9900db6b38264954fd45601457/src/assets/client-meet.svg" alt="" srcset="">
+                <img src="https://raw.githubusercontent.com/yurledyspuche25/landing/7d28bff547cd5b9900db6b38264954fd45601457/src/assets/client-maker.svg" alt="" srcset="">
+            </figure>
+        </div>
+        <figure>
+            <img src="https://github.com/yurledyspuche25/landing/blob/main/src/assets/image-hero-mobile.png?raw=true" alt="" srcset="">
+        </figure>
+    </div>
 </body>
 
 </html>
