change in style and index

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
             </figure>
         </div>
 
-        <img src="https://github.com/yurledyspuche25/landing/blob/main/src/assets/image-hero-mobile.png?raw=true" alt=""
+        <img class="imagen" src="https://github.com/yurledyspuche25/landing/blob/main/src/assets/image-hero-mobile.png?raw=true" alt=""
             srcset="">
 
     </div>
